--- a/src/index.html
+++ b/src/index.html
@@ -24,31 +24,34 @@
                     <label>Skill Name</label>
                     <input type="text" id="name" class="small">
                 </div>
-
-                <div>
-                    <p>Did you complete this skill?</p>
-                    <div>
-                        <input type="radio" id="complete" name= "complete" value="True" class="small">
-                        <label for="complete">Yes</label>
-                    </div>
-
-                    <div>
-                        <input type="radio" id="complete" name= "complete" value="False" class="small">
-                        <label for="complete">No</label>
-                    </div>
-                </div>
-
                 <button class="ui primary submit button" type="submit" style="margin-top: 10px">Submit</button>
             </form>
         </div>
+
+        <div id="submit">
+        </div>
+
         <script>
-         let headers = new Headers();
-         headers.append(
-             "Content-Type", "application/json"
-         )
-         console.log( headers);
+         function prettyPrintResponse(responseBody){
+             let skill = JSON.parse(responseBody);
+             let fields = Object.keys(skill); // This is the data we also need for headers.
+             let row = fields.map(field => `<td>${skill[field]}</td>`);
+             let headerRow = fields.map(field => `<th>${field}</th>`);
+             let tableStart = ["<table>", "<tr>"]
+                 .concat(headerRow)
+                 .concat(["</tr>", "<tr>"])
+                 .concat(row)
+                 .concat(["</tr>", "</table>"])
+                 .join("\n");
+             document.getElementById("submit").innerHTML += tableStart //creates table in submit div of response
+         }
+
          function postData (event){
+             const skill_name = document.getElementById("name").value;
              event.preventDefault();
+             console.log(skill_name);
+
+             //debugger;
              fetch('http://localhost:8000/enter_data', {
                  method: 'POST',
                  headers: new Headers({
@@ -56,13 +59,14 @@
                      "Content-Type": "application/json"
                  }),
                  body: JSON.stringify({
-                     "name": "mindfulness",
+                     "name": skill_name,
                      "completed": true
                  })
              })
-                 .then(response => console.log(response));
-         }
+                 .then(response => response.text())
+                 .then(prettyPrintResponse);
 
+         }
          const form = document.getElementById("test-form");
          form.onsubmit = postData;
         </script>
